src/styles/globals.css
@import 'tailwindcss';
@import './fonts.css';

@theme {
	--color-burgundy: #7b1931;
	--color-light-burgundy: #f2e8ea;
	--color-blue: #193b7b;
	--color-gold: #eae3c9;
	--color-white: #f5f5f5;
	--color-black: #121212;
	--color-gray: #a0a4a8;
	--color-light-blue: #f0f4f8;
	--color-green: #2a7d5a;
	--color-orange: #e76f51;

	--font-family-sans:
		'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
		'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
		'Helvetica Neue', sans-serif;
}

:root {
	--background: #ffffff;
	--foreground: #171717;
}

@media (prefers-color-scheme: light) {
	:root {
		--background: #0a0a0a;
		--foreground: #ededed;
	}
}

body {
	background: var(--background);
	color: var(--foreground);
	font-family:
		'Poppins',
		-apple-system,
		BlinkMacSystemFont,
		'Segoe UI',
		'Roboto',
		'Oxygen',
		'Ubuntu',
		'Cantarell',
		'Fira Sans',
		'Droid Sans',
		'Helvetica Neue';
}

